# canna

./: .cvsignore  .editorconfig  .gitignore  CHANGES.jp  COPYRIGHT  Canna.conf  Canna.conf-altdev  Canna.conf-dev  Canna.conf.dist  ChangeLog  INSTALL  INSTALL.jp  Imakefile  Makefile  Makefile.am  OCHANGES.jp  README  README.jp  RKCCONF.jp  WHATIS  WHATIS.jp  canna35b2.patch1  cannaconf.h  config.h.in  configure  configure.ac  mkrelease.sh
canna/: Imakefile  Makefile  Makefile.am  RK.h  ccompat.h  jrkanji.h  keydef.h  mfdef.h  net.h  patchlevel.h  protodefs.h  pubconf.h  rkcapi.h  symbolname.h  sysdep.h  widedef.h
canuum/: .cvsignore  Canuum.patch  Imakefile  README.copyright  README.jp  Uum.files  acconfig.h  buffer.h  canna.c  canuum.jmn  canuum.man  checkout.sh  commonhd.h  config.h.in  configure  configure.ac  configure.in  cursor.c  freewnn-uum.files  header.c  impdir.sh  jhlp.c  printf.c  screen.c  sdefine.h  sheader.h  termcap.c  termio.c  uumimport.sh  wnn_config.h  wnn_os.h  xutoj.c
ccustom/: .cvsignore  Imakefile  README.386  canna.h  ccustom.c  ccustom.h  ccustom.jmn  ccustom.man  gram.y  irkeydef.h  irmfdef.h  iroha.h  keydef.h  lex.l  lisp.c  lisp.h  mfdef.h  parse.c  set.c  set.h  symbolname.h  util.c  wcanna.c  wiroha.c
cmd/: Imakefile  Makefile  Makefile.am  cmd.tmpl
cmd/canlisp/: .cvsignore  Imakefile  Makefile  Makefile.am  canlisp.c
cmd/cannacheck/: .cvsignore  Imakefile  Makefile  Makefile.am  ccheck.jmn  ccheck.man  main.c
cmd/cannastat/: .cvsignore  Imakefile  Makefile  Makefile.am  cannastat.c  cstat.jmn  cstat.man
cmd/catdic/: .cvsignore  Imakefile  Makefile  Makefile.am  RKdelline.c  addwords.jmn  addwords.man  can.c  cannacmd.jpn  cannakill.jmn  cannakill.man  catdic.jmn  catdic.man  chmoddic.jmn  chmoddic.man  cpdic.jmn  cpdic.man  delwords.jmn  delwords.man  lsdic.jmn  lsdic.man  mkdic.jmn  mkdic.man  mvdic.jmn  mvdic.man  rmdic.jmn  rmdic.man  rutil.c
cmd/chkconc/: .cvsignore  Imakefile  Makefile.am  chkconc.c
cmd/crfreq/: Imakefile  Makefile  Makefile.am  crfreq.c
cmd/crrdic/: Imakefile  crrdic.c
cmd/crxdic/: Imakefile  Makefile  Makefile.am  crxdic.c
cmd/crxgram/: Imakefile  Makefile  Makefile.am  crxgram.c  crxgram.c.SV
cmd/cshost/: .cvsignore  Imakefile  Makefile  Makefile.am  cshost.c  cshost.jmn  cshost.man
cmd/ctow/: .cvsignore  Imakefile  Makefile  Makefile.am  ctow.c  ctow.jmn  ctow.man
cmd/dicar/: .cvsignore  Imakefile  Makefile  Makefile.am  dicar.c  dicar.jmn  dicar.man
cmd/dpbindic/: .cvsignore  Imakefile  Makefile  Makefile.am  dpbindic.cpp  dpbindic.jmn  dpbindic.man
cmd/dpromdic/: .cvsignore  Imakefile  Makefile  Makefile.am  dpromdic.c  dpromdic.jmn  dpromdic.man
cmd/dpxdic/: .cvsignore  Imakefile  Makefile  Makefile.am  dpxdic.c
cmd/forcpp/: Imakefile  Makefile  Makefile.am  forcpp.c
cmd/forsort/: Imakefile  Makefile  Makefile.am  forsort.c
cmd/kpdic/: Imakefile  Makefile  Makefile.am  kpdic.c
cmd/mergewd/: Imakefile  Makefile  Makefile.am  mergewd.c
cmd/mkbindic/: .cvsignore  Imakefile  Makefile  Makefile.am  mkbindic.cpp  mkbindic.jmn  mkbindic.man
cmd/mkromdic/: .cvsignore  Imakefile  Makefile  Makefile.am  mkromdic.cpp  mkromdic.jmn  mkromdic.man
cmd/splitwd/: .cvsignore  Imakefile  Makefile  Makefile.am  splitwd.c  splitwd.jmn  splitwd.man
cmd/wtoc/: .cvsignore  Imakefile  Makefile  Makefile.am  wtoc.c  wtoc.jmn  wtoc.man
debian/: FILES  README.Debian  TODO  autoreconf  canna-utils.docs  canna-utils.files  canna-utils.install  canna-utils.links  canna-utils.lintian-overrides  canna-utils.manpages  canna.dirs  canna.install  canna.lintian-overrides  canna.manpages  changelog  chkconc.1  conffiles  config  control  copyright  dirs  docs  forsort.1  hosts.canna  init  libcanna1g-dev.files  libcanna1g-dev.install  libcanna1g.config  libcanna1g.dirs  libcanna1g.docs  libcanna1g.files  libcanna1g.install  libcanna1g.lintian-overrides  libcanna1g.postinst  libcanna1g.postrm  libcanna1g.symbols  libcanna1g.templates  libcanna1g.templates.ja  links  postinst  (+8 more)
debian/manpages/: canlisp.1  forsort.1  mergeword.1  update-canna-dics_dir.8
debian/patches/: 00list  01_mkrelease_autoconf213_debian.dpatch  01_mkrelease_autoconf213_debian.patch  02_debiandefines.dpatch  02_debiandefines.patch  series  (+15 more)
dic/: Imakefile  Makefile  Makefile.am
dic/ideo/grammar/: Imakefile  Makefile  Makefile.am  gram.code  gram.goto  main.code
dic/ideo/pubdic/: Imakefile  Makefile  Makefile.am  README.txt  a.p  h.p  k.p  m.p  n.p  pod.c  pod.jmn  r.p  s.p  t.p  w.p  y.p
dic/ideo/words/: Imakefile  Makefile  Makefile.am  dics.dir  geo.t  hojomwd.t  hojoswd.t  keishiki.t  obsolete.dir  suffix.t
dic/phono/: Imakefile  Makefile  Makefile.am  default.kpdef  english.kpdef  jdaemon.kpdef  just.kpdef  kaisoku.kpdef  kana.kpdef  lan5.kpdef  matsu.kpdef  newjis.kpdef  romaji.kpdef  sokuon.kpdef  tut.kpdef  vje.kpdef  wx2+.kpdef
doc/: Imakefile  Makefile  README.jp  RKCCONF.jp  canna.bib  canna.sty
lib/: Imakefile  Makefile  Makefile.am
lib/RKC/: .cvsignore  Imakefile  Makefile  Makefile.am  conf.c  conf.h  confP.h  convert.c  rkc.c  rkc.h  rkcw.h  wconvert.c  wutil.c
lib/RKC16/: .cvsignore  Imakefile  Makefile  Makefile.am
lib/canna/: .cvsignore  Imakefile  Makefile  Makefile.am  RKkana.c  RKroma.c  RkCloseR.jmn  RkCloseR.man  RkCloseRoma.man  RkCvtEuc.jmn  RkCvtEuc.man  RkCvtHan.jmn  RkCvtHan.man  RkCvtHir.jmn  RkCvtHir.man  RkCvtHira.man  RkCvtKan.jmn  RkCvtKana.man  RkCvtRom.jmn  RkCvtRoma.man  RkCvtZen.jmn  RkCvtZen.man  RkMapPho.jmn  RkMapPho.man  RkMapPhonogram.man  RkMapRom.jmn  RkMapRom.man  RkOpenRo.jmn  RkOpenRo.man  RkPhono.jmn  alphamap.h  bunmap.h  bunsetsu.c  bushu.c  canna.h  cannalib.jmn  cannalib.man  chikuji.c  chikujimap.h  commondata.c  (+41 more)
lib/canna16/: .cvsignore  Imakefile  Makefile  Makefile.am
misc/: Imakefile  Makefile  Makefile.am  canna  copyright  rc.canna-dist
sample/: sample.c
server/: IR.h  Imakefile  Makefile  Makefile.am  WaitFor.c  comm.c  comm.h  connection.c  convert.c  main.c  misc.c  server.h  server.jmn  server.man  session.c  util.c  wconvert.c
test/: README.md
(+119 files in other folders)
