
lib_LTLIBRARIES = libRKC16.la

libRKC16_la_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib -DCPP='"$(CPP)"' -DCANNA_WCHAR16
libRKC16_la_LDFLAGS = -version-info 1:3:0
libRKC16_la_SOURCES = ../RKC/rkc.c ../RKC/convert.c ../RKC/wconvert.c ../RKC/wutil.c ../RKC/conf.c ../RKindep/cfuncs.c ../RKindep/file.c ../RKindep/strops.c
